# distortosTemplateSubfolder

./: .gitignore  .travis.yml  CHANGELOG.md  CMakeLists.txt  README.md  Rules.mk  Tupfile.lua  main.cpp
folderWithFunctions/: Rules.mk  Tupfile.lua  distortosTemplateSubfolder-sources.cmake  distortosTemplateSubfolder.elf-sources.cmake  functionFromFolder.cpp  functionFromFolder.hpp
folderWithFunctions/subfolderWithFunctions/: Rules.mk  Tupfile.lua  distortosTemplateSubfolder-sources.cmake  distortosTemplateSubfolder.elf-sources.cmake  functionFromSubfolder.cpp  functionFromSubfolder.hpp
